html css update 2

--- a/index.html
+++ b/index.html
@@ -18,23 +18,21 @@
 
     <section> 
        
-       <h3>section</h3>
+       section
        
             <article>
-                <h3>article</h3>
-                <h4>h1, h2, h3</h4>
+                <h4>article</h4>
+                <br>
+                <strong class=h1>h1, h2, h3</strong>
+                <br>
                 <p>p</p>
             </article>
 
     </section>
 
-    <aside>
-        <h3>aside</h3>
-    </aside>
+    <aside>aside</aside>
 
-    <footer>
-        <h2>footer</h2>
-    </footer>
+    <footer>footer</footer>
 
 </body>
 </html>
