--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
        
             <article>
                 <h4>article</h4>
-                <br>
-                <strong class=h1>h1, h2, h3</strong>
-                <br>
+                <p><strong>h1, h2, h3</strong></p>
                 <p>p</p>
             </article>
 
